--- a/demo/samples/scala/reports/ScalaReport.jrxml
+++ b/demo/samples/scala/reports/ScalaReport.jrxml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Created with Jaspersoft Studio version 6.2.1.final using JasperReports Library version 6.2.1  -->
+<!-- 2016-05-05T13:11:30 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ScalaReport" language="scala" pageWidth="595" pageHeight="842" columnWidth="515" leftMargin="40" rightMargin="40" topMargin="50" bottomMargin="50" uuid="bb18295f-3831-4e6c-bd0d-472ddbcbbbd5">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
@@ -10,46 +12,46 @@
 	<title>
 		<band height="742">
 			<line>
-				<reportElement uuid="1c432757-8d69-4d2c-aa1b-465d0ec22731" x="0" y="0" width="515" height="1"/>
+				<reportElement x="0" y="0" width="515" height="1" uuid="1c432757-8d69-4d2c-aa1b-465d0ec22731"/>
 			</line>
 			<staticText>
-				<reportElement uuid="be52a74f-4d18-4cf8-b893-c6f30ae7a6ef" x="0" y="10" width="515" height="30"/>
+				<reportElement x="0" y="10" width="515" height="30" uuid="be52a74f-4d18-4cf8-b893-c6f30ae7a6ef"/>
 				<textElement textAlignment="Center">
 					<font size="22"/>
 				</textElement>
 				<text><![CDATA[Scala Sample]]></text>
 			</staticText>
 			<textField hyperlinkType="Reference" hyperlinkTarget="Blank">
-				<reportElement uuid="0bb453c4-9cde-40b7-973a-79027f649641" x="0" y="50" width="515" height="50"/>
+				<reportElement x="0" y="50" width="515" height="50" uuid="0bb453c4-9cde-40b7-973a-79027f649641"/>
 				<textElement textAlignment="Center">
 					<font size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA["This sample uses Scala Version 2.9.3.\n" + "It uses code based on the example at http://www.scala-lang.org/node/228"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["This sample uses Scala Version 2.11.8.\n" + "It uses code based on the example at http://www.scala-lang.org/node/228"]]></textFieldExpression>
 				<hyperlinkReferenceExpression><![CDATA["http://www.scala-lang.org/node/228"]]></hyperlinkReferenceExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="4f712f24-511b-495e-a813-9aaffbbbc9ef" x="280" y="150" width="200" height="35"/>
+				<reportElement x="280" y="150" width="200" height="35" uuid="4f712f24-511b-495e-a813-9aaffbbbc9ef"/>
 				<textElement>
 					<font size="24"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Color}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="d482591f-90ee-4088-8779-89070a858681" positionType="Float" x="0" y="150" width="259" height="35"/>
+				<reportElement positionType="Float" x="0" y="150" width="259" height="35" uuid="d482591f-90ee-4088-8779-89070a858681"/>
 				<textElement textAlignment="Right">
 					<font size="24"/>
 				</textElement>
 				<text><![CDATA[Color =]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f4490e7e-c571-4d25-9bd2-10deb7cb820c" positionType="Float" x="0" y="190" width="259" height="35"/>
+				<reportElement positionType="Float" x="0" y="190" width="259" height="35" uuid="f4490e7e-c571-4d25-9bd2-10deb7cb820c"/>
 				<textElement textAlignment="Right">
 					<font size="24"/>
 				</textElement>
 				<text><![CDATA[Scala color match: ]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="1f2ccc95-f030-4b25-b5d4-99d272a90485" x="280" y="190" width="200" height="75" forecolor="#008000"/>
+				<reportElement x="280" y="190" width="200" height="75" forecolor="#008000" uuid="1f2ccc95-f030-4b25-b5d4-99d272a90485"/>
 				<textElement>
 					<font size="24"/>
 				</textElement>
@@ -71,14 +73,14 @@ def getCode(name: String):String = {
 getCode($P{Color})]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="58f855c6-e34c-48c2-b552-8ff72be96089" positionType="Float" x="0" y="270" width="480" height="35"/>
+				<reportElement positionType="Float" x="0" y="270" width="480" height="35" uuid="58f855c6-e34c-48c2-b552-8ff72be96089"/>
 				<textElement textAlignment="Center">
 					<font size="24"/>
 				</textElement>
 				<text><![CDATA[Scala Expression Syntax:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="ec1183a9-bba7-4ef3-b257-ccdae6792212" x="20" y="310" width="460" height="290"/>
+				<reportElement x="20" y="310" width="460" height="290" uuid="ec1183a9-bba7-4ef3-b257-ccdae6792212"/>
 				<textElement markup="none">
 					<font size="12"/>
 				</textElement>
